Updated dependencies for JDK 21